package problems.Apply_Coupon;

public abstract  class CouponDecorator extends Product{
}
