package problems.Apply_Coupon;

public enum ProductType {
    ELECTRONICS_GOODS,FURNITURE_GOODS;

}
