@startuml

title __APPLY_COUPON's Class Diagram__\n

  namespace problems.Apply_Coupon {
    abstract class problems.Apply_Coupon.CouponDecorator {
    }
  }
  

  namespace problems.Apply_Coupon {
    class problems.Apply_Coupon.Item1 {
        + Item1()
        + getPrice()
    }
  }
  

  namespace problems.Apply_Coupon {
    class problems.Apply_Coupon.Item2 {
        + Item2()
        + getPrice()
    }
  }
  

  namespace problems.Apply_Coupon {
    class problems.Apply_Coupon.Main {
        {static} + main()
    }
  }
  

  namespace problems.Apply_Coupon {
    class problems.Apply_Coupon.PercentageCouponDecorator {
        ~ discountPercentage : int
        + PercentageCouponDecorator()
        + getPrice()
    }
  }
  

  namespace problems.Apply_Coupon {
    abstract class problems.Apply_Coupon.Product {
        ~ name : String
        ~ originalPrice : double
        + Product()
        + Product()
        {abstract} + getPrice()
        + getType()
    }
  }
  

  namespace problems.Apply_Coupon {
    enum ProductType {
      ELECTRONICS_GOODS
      FURNITURE_GOODS
    }
  }
  

  namespace problems.Apply_Coupon {
    class problems.Apply_Coupon.ShoppingCart {
        ~ cart : List<Product>
        + ShoppingCart()
        + ShoppingCart()
        + addToCart()
        + getTotalPrice()
    }
  }
  

  namespace problems.Apply_Coupon {
    class problems.Apply_Coupon.TypeCouponDecorator {
        ~ discountPercentage : int
        {static} ~ eligibleTypes : List<ProductType>
        + TypeCouponDecorator()
        + getPrice()
    }
  }
  

  problems.Apply_Coupon.CouponDecorator -up-|> problems.Apply_Coupon.Product
  problems.Apply_Coupon.Item1 -up-|> problems.Apply_Coupon.Product
  problems.Apply_Coupon.Item2 -up-|> problems.Apply_Coupon.Product
  problems.Apply_Coupon.PercentageCouponDecorator -up-|> problems.Apply_Coupon.CouponDecorator
  problems.Apply_Coupon.PercentageCouponDecorator o-- problems.Apply_Coupon.Product : product
  problems.Apply_Coupon.Product o-- problems.Apply_Coupon.ProductType : type
  problems.Apply_Coupon.TypeCouponDecorator -up-|> problems.Apply_Coupon.CouponDecorator
  problems.Apply_Coupon.TypeCouponDecorator o-- problems.Apply_Coupon.Product : product
  problems.Apply_Coupon.TypeCouponDecorator o-- problems.Apply_Coupon.ProductType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
